--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div>INDEX</div>
     <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
